homeloan-emi-calculator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emi-calculator
  namespace: storagetax
spec:
  selector:
    app: emi-calculator
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
